feat:fix breed
