# docs/swagger.yaml
@@ -15,6 +15,14 @@ definitions:
   dto.CreateCatRequest:
     properties:
       breed:
+        enum:
+        - sphynx
+        - british
+        - persian
+        - maine_coon
+        - siamese
+        - bengal
+        - ragdoll
         type: string
       name:
         maxLength: 64
@@ -31,8 +39,6 @@ definitions:
     required:
     - breed
     - name
-    - salary
-    - years_experience
     type: object
   dto.CreateCatResponse:
     properties:
@@ -203,8 +209,12 @@ paths:
             $ref: '#/definitions/dto.CreateCatResponse'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
         "500":
           description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
       summary: Create a new spy cat
       tags:
       - Cats
